--- a/website/package.json
+++ b/website/package.json
@@ -3,13 +3,14 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
+    "build": "npm run stats && nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "generate": "npm run stats && nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "stats": "tsx scripts/generate-stats.ts"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^10.1.0",
@@ -29,6 +30,7 @@
     "@types/js-yaml": "^4.0.9",
     "eslint": "^9.37.0",
     "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
     "typescript-eslint": "^8.45.0"
   }
 }
