fix: replace all 'Python Breakthrough' with 'Python ПРОрыв' brand name
Updated brand name throughout the site:
- Header logo: now uses t('brand.name') instead of hardcoded text
- Footer copyright: now uses t('brand.name') instead of hardcoded text
- site-config.yaml: course title changed from 'Python Breakthrough' to 'Python ПРОрыв'
- latest-changes.md: updated brand reference

The translation 'brand.name: Python ПРОрыв' was already in place,
now all hardcoded references use the translation key for consistency.

Site now displays 'Python ПРОрыв' everywhere!

--- a/website/content/site-config.yaml
+++ b/website/content/site-config.yaml
@@ -13,7 +13,7 @@ author:
       icon: "telegram"
 
 course:
-  title: "Python Breakthrough"
+  title: "Python ПРОрыв"
   subtitle: "Разработка веб-приложений на Python"
   description: |
     Комплексный курс по веб-разработке на Python.
