feat: implement pre-generated JSON data for static site generation
Refactored data loading to support static site generation (SSG):

## Problem:
During 'npm run generate', Nuxt prerenderers couldn't:
1. Use fetch() in SSR (no HTTP server during build)
2. Import Node.js modules (fs/path) in client bundles
3. Parse YAML files at runtime

## Solution:
### 1. Created generate-data.ts script
- Runs before nuxt generate
- Parses all YAML files and course data
- Generates JSON files in public/data/:
  - course.json - All module/topic/lesson data
  - stats.json - Pre-calculated statistics
  - site-config.json - Site configuration
  - faq.json - FAQ items
  - projects.json - Student projects
  - latest-changes.json - Markdown rendered to HTML

### 2. Updated package.json
- Changed 'stats' script to run generate-data.ts
- Maintains same workflow: npm run generate

### 3. Refactored all composables
- useConfig, useCourseData, useFaqData, useProjectsData, useLatestChanges
- Environment-aware data loading:
  - SSR (import.meta.server): readFileSync from public/data/
  - Client: fetch() from /data/
- Removed all YAML parsing and markdown rendering from composables
- No more Node.js module imports in composables

### 4. Updated page components
- index.vue, statistics.vue: Removed numberOfStudents parameter
- Stats now pre-calculated in JSON

## Benefits:
✅ Static generation works without errors
✅ No Node.js modules in client bundle
✅ Faster page loads (pre-processed data)
✅ Clean separation: build-time vs runtime
✅ Same data in SSR and client (no hydration mismatches)

## Build Process:
1. npm run stats → generates JSON files
2. nuxt generate → uses JSON for SSR
3. Client receives pre-rendered HTML + JSON

Successfully generates 35 routes including all module pages!

--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "stats": "tsx scripts/generate-stats.ts"
+    "stats": "tsx scripts/generate-data.ts"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^10.1.0",
