Add url to telegram channel

--- a/website/content/site-config.yaml
+++ b/website/content/site-config.yaml
@@ -9,7 +9,7 @@ author:
       url: "https://github.com/mahenzon"
       icon: "github"
     - name: "Telegram"
-      url: "https://t.me/yourusername"
+      url: "https://t.me/Khorenyan"
       icon: "telegram"
     - name: "YouTube"
       url: "https://www.youtube.com/@SurenKhorenyan"
