--- a/website/content/faq.yaml
+++ b/website/content/faq.yaml
@@ -1,31 +1,82 @@
 - question: "Можно ли проходить курс в своём темпе?"
   answer: |
-    Да! Курс полностью асинхронный. Вы можете учиться в удобное для вас время и темпе.
+    Да!
+    Курс полностью асинхронный. Вы можете учиться в удобное для вас время и темпе.
     Нет жёстких дедлайнов и расписаний. Изучайте материалы когда вам удобно.
-  order: 1
 
 - question: "Можно ли проходить модули не по порядку?"
-  answer: |
+  answer: >
     Конечно! Модули можно проходить в любом порядке, если у вас уже есть базовые знания
-    по некоторым темам. Выбирайте то, что вам интересно, и начинайте с этого.
-    
-    Однако мы рекомендуем следовать предложенному порядку для оптимального обучения.
-  order: 2
+    по некоторым темам. Выбирайте то, что вам интересно, и начинайте оттуда.
+
+
+    И хоть лучше следовать предложенному порядку для оптимального обучения,
+    если вы уверены в своих силах, можете сразу переходить к интересующей вас теме.
+    Ничто не мешает вернуться к пропущенным темам позже.
 
 - question: "Как получить доступ к курсу?"
   answer: |
-    Информация о доступе к курсу будет добавлена позже.
-    Следите за обновлениями на этой странице.
-  order: 3
+    Перейдите в раздел "Ссылки на курс" из меню навигации сверху.
+
+- question: "Подходит ли мне этот курс?"
+  answer: >
+    Пожалуйста, для начала ознакомьтесь с основами основ Python,  
+    а также посмотрите на ютубе (и других площадках), как Сурен преподаёт.
+    Если это не ваш формат, то и курс Сурена вам не подходит.
+
+
+    Если вы уже писали какие-то скрипты на Python,
+    пробовали делать что-то на FastAPI / Django / Flask / etc,
+    но чувствуете, что вам не хватает концентрированных знаний,
+    заданий, консультаций, то программа для вас.
 
 - question: "Какие требования к знаниям для начала курса?"
-  answer: |
-    Базовые знания программирования на Python приветствуются, но не обязательны.
-    Курс построен так, чтобы даже новички могли освоить материал.
-  order: 4
+  answer: >
+    Если вы решили, что курс вам подходит, то убедитесь,
+    что вы уже умеете отличать функции от классов,
+    знаете, в каком стиле называть переменные,
+    а также понимаете, что программирование это непросто.
+
+- question: "Нужен ли компьютер для прохождения курса?"
+  answer: >
+    Я считаю, что да. Любого современного компьютера хватит (если он не старше десяти лет).
+
+
+    На курсе есть студент, который пишет код с телефона.
+    Это несёт за собой огромные сложности и превозмогания,
+    а код приходится запускать на удаленном сервере.
+    Но если вам очень хочется, то это реально. Не рекомендую.
 
 - question: "Есть ли поддержка от преподавателя?"
-  answer: |
-    Да, в рамках курса предусмотрена поддержка. Вы можете задавать вопросы
+  answer: >
+    Да, активная поддержка в чате. Там вы можете задавать вопросы
     и получать помощь по материалам курса.
-  order: 5
+
+
+    Также по общему согласованию проводятся групповые консультации примерно раз в месяц.
+
+- question: "На какой площадке лучше купить курс?"
+  answer: >
+    Программа доступна на отдельном сайте (на основе ZenClass) и на Stepik.
+    Если вы не намерены переплачивать, то достаточно присоединиться на сайте курса.
+
+
+    Если вы присоединились через Stepik,
+    я могу добавить вас и на основной сайт без дополнительной платы.
+    Для этого зарегистрируйтесь на площадке, подключитесь к бесплатному тарифу,
+    напишите мне вашу почту и приложите ссылку на профиль на Stepik, на который вы купили курс.
+
+- question: "Почему цена на площадках различается?"
+  answer: |
+    На сайте курса цена ниже, а на Stepik выше.
+    Это связано с повышенной комиссией, которую мне приходится отдавать площадке.
+
+- question: "В чем отличие программ на разных площадках?"
+  answer: >
+    Разницы между программами нет, весь материал публикуется на обе площадки одновременно.
+
+
+    Отличие будет в интерфейсе и формате автоматических тестов:
+
+    на Stepik больше видов задач (не только тесты и свободные ответы, но ещё и сортировки),
+    поэтому некоторые задания могут отличаться внешне. Суть задания остаётся прежней.
