--- a/website/public/data/site-config.json
+++ b/website/public/data/site-config.json
@@ -4,12 +4,17 @@
     "bio": "Python Backend Developer.\nOpen Source Contributor.\nПреподаватель по веб-разработке на Python.\n",
     "links": [
       {
+        "name": "Обо мне",
+        "url": "https://www.mahenzon.ru",
+        "icon": "homepage"
+      },
+      {
         "name": "GitHub",
         "url": "https://github.com/mahenzon",
         "icon": "github"
       },
       {
-        "name": "Telegram",
+        "name": "Телеграм",
         "url": "https://t.me/Khorenyan",
         "icon": "telegram"
       },
@@ -19,6 +24,10 @@
         "icon": "youtube"
       }
     ]
+  },
+  "og": {
+    "title": "Python ПРОрыв - Веб разработка на Python.",
+    "description": "Курс. Полный цикл разработки веб разработки на Python с нуля до продакшн."
   },
   "course": {
     "title": "Python ПРОрыв",
