--- a/website/content/course-projects.yaml
+++ b/website/content/course-projects.yaml
@@ -1,13 +1,15 @@
 - id: "url-shortener"
   title: "URL Shortener"
-  description: "Сервис для создания коротких ссылок. Разработаете полноценное веб-приложение с базой данных, REST API и современным интерфейсом."
-  url: "https://example.com"
-  status: "available"
+  description: >
+    Сервис для создания коротких ссылок.
+    Вы разработаете полноценное веб-приложение с базой данных, REST API и современным интерфейсом.
+  url: ""
+  status: "coming_soon"
   order: 1
 
-- id: "classified"
-  title: "Classified"
-  description: "To be delivered"
+- id: "wip"
+  title: "Work In Progress"
+  description: "To be announced"
   url: ""
   status: "coming_soon"
   order: 2
