--- a/website/public/data/course-projects.json
+++ b/website/public/data/course-projects.json
@@ -2,15 +2,15 @@
   {
     "id": "url-shortener",
     "title": "URL Shortener",
-    "description": "Сервис для создания коротких ссылок. Разработаете полноценное веб-приложение с базой данных, REST API и современным интерфейсом.",
-    "url": "https://example.com",
-    "status": "available",
+    "description": "Сервис для создания коротких ссылок. Вы разработаете полноценное веб-приложение с базой данных, REST API и современным интерфейсом.\n",
+    "url": "",
+    "status": "coming_soon",
     "order": 1
   },
   {
-    "id": "classified",
-    "title": "Classified",
-    "description": "To be delivered",
+    "id": "wip",
+    "title": "Work In Progress",
+    "description": "To be announced",
     "url": "",
     "status": "coming_soon",
     "order": 2
