--- a/website/public/data/students-projects.json
+++ b/website/public/data/students-projects.json
@@ -1,16 +1,16 @@
 [
   {
     "title": "Пример проекта 1",
-    "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано.",
-    "url": "https://example.com/project1",
-    "author": "Студент 1",
+    "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано. Станьте первым, чей проект будет добавлен на сайт.\n",
+    "url": "https://www.python.org/",
+    "author": "Гвидо ван Россум",
     "order": 1
   },
   {
     "title": "Пример проекта 2",
-    "description": "Описание второго проекта. Можно указать использованные технологии и особенности реализации.",
-    "url": "https://example.com/project2",
-    "author": "Студент 2",
+    "description": "Описание второго проекта. Здесь можно рассказать о том, что было реализовано. Станьте вторым, чей проект будет добавлен на сайт.\n",
+    "url": "https://vuejs.org/",
+    "author": "Эван Ю",
     "order": 2
   }
 ]
