Update tech stack label

--- a/website/content/technology-stack.yaml
+++ b/website/content/technology-stack.yaml
@@ -1,5 +1,5 @@
 title: "Технологический стек курса"
-subtitle: "Практические инструменты, которыми вы овладеете"
+subtitle: "Инструменты, которые ты освоишь на практике:"
 
 categories:
 
