upd tech stack icon

--- a/website/content/technology-stack.yaml
+++ b/website/content/technology-stack.yaml
@@ -135,7 +135,7 @@ categories:
 
       - title: "GitHub Actions"
         icon: "⚙️"
-        path: "/icons/Github-Actions.svg"
+        path: "/icons/GitHub-Actions.svg"
 
       - title: "GitLab CI/CD"
         icon: "🦊"
