--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "stats": "tsx scripts/generate-data.ts"
+    "stats": "tsx scripts/generate-data.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^10.1.0",
@@ -29,8 +30,15 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/js-yaml": "^4.0.9",
     "eslint": "^9.37.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
     "typescript-eslint": "^8.45.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
   }
 }
