--- a/website/content/technology-stack.yaml
+++ b/website/content/technology-stack.yaml
@@ -9,24 +9,19 @@ categories:
     items:
 
       - title: "FastAPI"
-        icon: "⚡"
-        path: "/icons/FastAPI.svg"
+        icon-name: "FastAPI"
 
       - title: "Pydantic"
-        icon: "📐"
-        path: "/icons/Pydantic.svg"
+        icon-name: "Pydantic"
 
       - title: "SQLAlchemy"
-        icon: "🗄️"
-        path: "/icons/SQLAlchemy.svg"
+        icon-name: "SQLAlchemy"
 
       - title: "Django"
-        icon: "🌿"
-        path: "/icons/Django-filled.svg"
+        icon-name: "Django"
 
       - title: "Django REST Framework"
-        icon: "🔗"
-        path: "/icons/Django-REST-custom.svg"
+        icon-name: "DRF"
 
   - title: "Языки и шаблоны"
     icon:
@@ -34,16 +29,13 @@ categories:
     items:
 
       - title: "Python"
-        icon: "🐍"
-        path: "/icons/Python.svg"
+        icon-name: "Python"
 
       - title: "SQL"
-        icon: "🗃️"
-        path: "/icons/database.svg"
+        icon-name: "SQL"
 
       - title: "Jinja"
-        icon: "🪄"
-        path: "/icons/jinja.svg"
+        icon-name: "Jinja"
 
   - title: "Основы фронтенда"
     icon:
@@ -51,20 +43,16 @@ categories:
     items:
 
       - title: "HTML"
-        icon: "📄"
-        path: "/icons/HTML5.svg"
+        icon-name: "HTML"
 
       - title: "CSS"
-        icon: "🎨"
-        path: "/icons/CSS3.svg"
+        icon-name: "CSS"
 
       - title: "JavaScript"
-        icon: "🟨"
-        path: "/icons/JavaScript.svg"
+        icon-name: "JS"
 
       - title: "Bootstrap"
-        icon: "🅱️"
-        path: "/icons/Bootstrap.svg"
+        icon-name: "Bootstrap"
 
   - title: "Инфраструктура и данные"
     icon:
@@ -72,32 +60,25 @@ categories:
     items:
 
       - title: "Docker"
-        icon: "🐳"
-        path: "/icons/docker-minimal.svg"
+        icon-name: "Docker"
 
       - title: "Docker Compose"
-        icon: "⚙️"
-        path: "/icons/containers.svg"
+        icon-name: "Docker-Compose"
 
       - title: "Podman"
-        icon: "🐙"
-        path: "/icons/Podman.svg"
+        icon-name: "Podman"
 
       - title: "Redis"
-        icon: "💾"
-        path: "/icons/Redis.svg"
+        icon-name: "Redis"
 
       - title: "SQLite"
-        icon: "📘"
-        path: "/icons/SQLite.svg"
+        icon-name: "SQLite"
 
       - title: "Postgres"
-        icon: "🐘"
-        path: "/icons/PostgresSQL.svg"
+        icon-name: "Postgres"
 
       - title: "S3"
-        icon: "🪣"
-        path: "/icons/s3-bucket.svg"
+        icon-name: "S3"
 
   - title: "Инструменты разработки"
     icon:
@@ -105,28 +86,22 @@ categories:
     items:
 
       - title: "Black"
-        icon: "🖤"
-        path: "/icons/Black-formatter.svg"
+        icon-name: "Black"
 
       - title: "ruff"
-        icon: "🐶"
-        path: "/icons/ruff-r.svg"
+        icon-name: "ruff"
 
       - title: "my[py]"
-        icon: "✏️"
-        path: "/icons/mypy.svg"
+        icon-name: "mypy"
 
       - title: "pre-commit"
-        icon: "✅"
-        path: "/icons/pre-commit-logo.svg"
+        icon-name: "pre-commit"
 
       - title: "uv"
-        icon: "🌠"
-        path: "/icons/uv.svg"
+        icon-name: "uv"
 
       - title: "Poetry"
-        icon: "🖋️"
-        path: "/icons/Python-Poetry.svg"
+        icon-name: "Poetry"
 
   - title: "CI/CD и деплой"
     icon:
@@ -134,12 +109,10 @@ categories:
     items:
 
       - title: "GitHub Actions"
-        icon: "⚙️"
-        path: "/icons/GitHub-Actions.svg"
+        icon-name: "GitHub-Actions"
 
       - title: "GitLab CI/CD"
-        icon: "🦊"
-        path: "/icons/gitlab-ci.svg"
+        icon-name: "GitLab-CI-CD"
 
   - title: "Тестирование и покрытие"
     icon:
@@ -147,20 +120,16 @@ categories:
     items:
 
       - title: "Unittest"
-        icon: "🧾"
-        path: "/icons/test-tube.svg"
+        icon-name: "Unittest"
 
       - title: "Pytest"
-        icon: "🧫"
-        path: "/icons/pytest.svg"
+        icon-name: "Pytest"
 
       - title: "Coverage"
-        icon: "📈"
-        path: "/icons/chart-bar-alt.svg"
+        icon-name: "Coverage"
 
       - title: "Codecov"
-        icon: "🎯"
-        path: "/icons/Codecov.svg"
+        icon-name: "Codecov"
 
   - title: "Брокеры сообщений и очереди задач"
     icon:
@@ -168,24 +137,19 @@ categories:
     items:
 
       - title: "RabbitMQ"
-        icon: "🐇"
-        path: "/icons/RabbitMQ.svg"
+        icon-name: "RabbitMQ"
 
       - title: "NATS"
-        icon: "🛰️"
-        path: "/icons/nats.svg"
+        icon-name: "NATS"
 
       - title: "FastStream"
-        icon: "📡"
-        path: "/icons/FastStream.svg"
+        icon-name: "FastStream"
 
       - title: "Celery"
-        icon: "🥬"
-        path: "/icons/celery-logo.svg"
+        icon-name: "Celery"
 
       - title: "Taskiq"
-        icon: "🧠"
-        path: "/icons/taskiq-small-logo.svg"
+        icon-name: "Taskiq"
 
   - title: "Терминал, CLI"
     icon:
@@ -193,24 +157,19 @@ categories:
     items:
 
       - title: "bash / zsh"
-        icon: "💻"
-        path: "/icons/Bash.svg"
+        icon-name: "bash"
 
       - title: "PowerShell"
-        icon: "🛰️"
-        path: "/icons/PowerShell.svg"
+        icon-name: "PowerShell"
 
       - title: "Typer"
-        icon: "🎹"
-        path: "/icons/Typer.svg"
+        icon-name: "Typer"
 
       - title: "Scoop"
-        icon: "🪟"
-        path: "/icons/icecream-scoop.svg"
+        icon-name: "Scoop"
 
       - title: "Homebrew"
-        icon: "🍺"
-        path: "/icons/Homebrew.svg"
+        icon-name: "Homebrew"
 
 
   - title: "Инструменты и платформы"
@@ -219,21 +178,16 @@ categories:
     items:
 
       - title: "PyCharm"
-        icon: "🔮"
-        path: "/icons/PyCharm.svg"
+        icon-name: "PyCharm"
 
       - title: "DBeaver"
-        icon: "🦫"
-        path: "/icons/DBeaver.svg"
+        icon-name: "DBeaver"
 
       - title: "GitHub CLI"
-        icon: "🐱"
-        path: "/icons/github-inverted.svg"
+        icon-name: "GitHub-CLI"
 
       - title: "GitHub"
-        icon: "😼"
-        path: "/icons/github-octocat.svg"
+        icon-name: "GitHub"
 
       - title: "GitLab"
-        icon: "🦊"
-        path: "/icons/GitLab.svg"
+        icon-name: "GitLab"
