--- a/website/content/icons.yaml
+++ b/website/content/icons.yaml
@@ -18,6 +18,14 @@
   icon: "🔗"
   path: "/icons/Django-REST-custom.svg"
 
+- name: "REST"
+  icon: "🛏️"
+  path: "/icons/rest-api.svg"
+
+- name: "JSON"
+  icon: "🛏️"
+  path: "/icons/JSON.svg"
+
 - name: "Python"
   icon: "🐍"
   path: "/icons/Python.svg"
@@ -106,7 +114,7 @@
   icon: "🦊"
   path: "/icons/gitlab-ci.svg"
 
-- name: "Unittest"
+- name: "unittest"
   icon: "🧾"
   path: "/icons/test-tube.svg"
 
@@ -166,9 +174,17 @@
   icon: "🔮"
   path: "/icons/PyCharm.svg"
 
+- name: "vscode"
+  icon: "🔮"
+  path: "/icons/vscode.svg"
+
 - name: "DBeaver"
   icon: "🦫"
   path: "/icons/DBeaver.svg"
+
+- name: "git"
+  icon: "🦸"
+  path: "/icons/git.svg"
 
 - name: "GitHub-CLI"
   icon: "🐱"
@@ -181,3 +197,15 @@
 - name: "GitLab"
   icon: "🦊"
   path: "/icons/GitLab.svg"
+
+- name: "Telegram"
+  icon: "✈️"
+  path: "/icons/telegram-icon.svg"
+
+- name: "Pipx"
+  icon: "✈️"
+  path: "/icons/pipx.svg"
+
+- name: "user-auth"
+  icon: "🔐"
+  path: "/icons/user-auth.svg"
