update tech stack icons and description

--- a/website/content/modules-tech.yaml
+++ b/website/content/modules-tech.yaml
@@ -1,10 +1,9 @@
 modules:
+
   "01-введение":
     tech:
-      - icon-name: "Python"
-        text: "Основы Python"
-      - icon-name: "PyCharm"
-        text: "Знакомство с PyCharm"
+      - icon-name: "Telegram"
+        text: "Чат курса"
 
   "03-работа-на-локальном-компьютере":
     tech:
@@ -13,84 +12,104 @@ modules:
       - icon-name: "PowerShell"
         text: "PowerShell для Windows"
       - icon-name: "Homebrew"
-        text: "Установка через Homebrew"
+        text: "Установка пакетов через Homebrew - macOS"
       - icon-name: "Scoop"
-        text: "Установка через Scoop"
+        text: "Установка пакетов через Scoop - Windows"
+      - icon-name: "Python"
+        text: "Установка Python"
+      - icon-name: "Pipx"
+        text: "Работа с Pipx"
 
   "04-pycharm":
     tech:
       - icon-name: "PyCharm"
-        text: "Профессиональная разработка в PyCharm"
+        text: "Профессиональная разработка в профессиональном PyCharm. Установка и настройка."
 
   "06-рабочее-окружение":
     tech:
+      - icon-name: "Python"
+        text: "Работа с Python и знакомство с виртуальным окружением"
+      - icon-name: "Poetry"
+        text: "Poetry для управления зависимостями. И сравнение с uv"
       - icon-name: "uv"
         text: "Менеджер пакетов uv"
-      - icon-name: "Poetry"
-        text: "Poetry для управления зависимостями"
-      - icon-name: "Docker"
-        text: "Контейнеризация приложений"
+      - icon-name: "Black"
+        text: "Автоматическое форматирование кода"
 
   "07-git":
     tech:
+      - icon-name: "git"
+        text: "Начало работы с Git"
       - icon-name: "GitHub"
-        text: "Работа с GitHub"
-      - icon-name: "GitLab"
-        text: "GitLab CI/CD"
-      - icon-name: "GitHub-CLI"
-        text: "GitHub CLI инструменты"
+        text: "Знакомство с GitHub и GitHub Desktop"
+      - icon-name: "PyCharm"
+        text: "Работа с git в PyCharm"
+      - icon-name: "vscode"
+        text: "Работа с git в VS Code"
 
   "10-fastapi-приложение-коротких-ссылок":
     tech:
       - icon-name: "FastAPI"
-        text: "FastAPI веб-фреймворк"
+        text: "FastAPI — современный веб-фреймворк"
       - icon-name: "Pydantic"
-        text: "Валидация данных"
-      - icon-name: "SQLAlchemy"
-        text: "ORM для работы с базами данных"
-      - icon-name: "Postgres"
-        text: "PostgreSQL база данных"
-      - icon-name: "Redis"
-        text: "Кэширование с Redis"
+        text: "Pydantic для валидации данных"
+      - icon-name: "REST"
+        text: "Знакомство с REST API"
+      - icon-name: "JSON"
+        text: "Зачем нужен JSON"
+      - icon-name: "user-auth"
+        text: "Auth"
       - icon-name: "Docker"
-        text: "Контейнеризация"
+        text: "Запуск сервисов в Docker контейнерах"
       - icon-name: "Docker-Compose"
-        text: "Оркестрация контейнеров"
+        text: "Оркестрация контейнеров через Docker Compose"
+      - icon-name: "Redis"
+        text: "Работа с быстрым Redis хранилищем"
+      - icon-name: "unittest"
+        text: "unittest — встроенный фреймворк для тестирования"
       - icon-name: "Pytest"
-        text: "Тестирование приложения"
+        text: "Pytest — полное тестирование приложения"
+      - icon-name: "mypy"
+        text: "Строгая типизация через my[py]"
+      - icon-name: "Coverage"
+        text: "Coverage для проверки покрытия"
       - icon-name: "GitHub-Actions"
-        text: "CI/CD Pipeline"
+        text: "GitHub Actions: автоматические проверки"
       - icon-name: "Jinja"
-        text: "Шаблонизация"
+        text: "Jinja шаблоны страниц"
       - icon-name: "HTML"
         text: "HTML разметка"
       - icon-name: "CSS"
-        text: "Стилизация"
+        text: "CSS — стили страниц"
       - icon-name: "Bootstrap"
-        text: "Bootstrap фреймворк"
+        text: "Bootstrap фреймворк для переиспользования CSS и JS"
+      - icon-name: "Postgres"
+        text: "PostgreSQL база данных"
+      - icon-name: "SQLAlchemy"
+        text: "SQLAlchemy ORM для работы с БД"
 
   "11-основы-frontend":
     tech:
       - icon-name: "HTML"
         text: "HTML разметка"
       - icon-name: "CSS"
-        text: "CSS стилизация"
+        text: "Стили CSS"
       - icon-name: "JS"
-        text: "JavaScript основы"
+        text: "Основы JavaScript"
       - icon-name: "Bootstrap"
-        text: "Bootstrap UI фреймворк"
-      - icon-name: "Jinja"
-        text: "Шаблонизатор Jinja2"
+        text: "Фреймворк Bootstrap CSS & JS"
+      - icon-name: "GitHub"
+        text: "Публикация на GitHub Pages"
 
   "12-sql":
     tech:
       - icon-name: "SQL"
         text: "SQL запросы"
       - icon-name: "SQLite"
-        text: "SQLite база данных"
+        text: "Работа с SQLite"
       - icon-name: "Postgres"
-        text: "PostgreSQL"
+        text: "Работа с PostgreSQL"
       - icon-name: "DBeaver"
-        text: "Работа с DBeaver"
+        text: "DBeaver для взаимодействия с базой"
       - icon-name: "SQLAlchemy"
         text: "SQLAlchemy ORM"
