--- a/website/content/icons.yaml
+++ b/website/content/icons.yaml
@@ -50,6 +50,10 @@
   icon: "🟨"
   path: "/icons/JavaScript.svg"
 
+- name: "HTMX"
+  icon: "🧑‍💻"
+  path: "/icons/htmx-icon.svg"
+
 - name: "Bootstrap"
   icon: "🅱️"
   path: "/icons/Bootstrap.svg"
