fix course links

--- a/website/content/course-links.yaml
+++ b/website/content/course-links.yaml
@@ -6,8 +6,7 @@ platforms:
     description: "Прием платежей со всего мира! Любые карточки, и не только. Если возникают сложности с оплатой, свяжитесь со мной."
     url: "https://learn.mahenzon.ru/public/product/2f21dd78-666e-4806-9046-818353d6fc1b/tariffs"
     buttonText: "Перейти к курсу"
-    noteIcon: "💡"
-    note: "Если вы хотите оформить программу на юр. лицо и оплатить по счёту, свяжитесь со мной (контакты ниже)."
+    note: 💡 Если вы хотите оформить программу на юр. лицо и оплатить по счёту, свяжитесь со мной (контакты ниже)."
     order: 1
 
   - id: stepik
@@ -17,6 +16,5 @@ platforms:
     description: "По ссылке автоматически применится промокод. Это вам в благодарность, что вы переходите по ссылке для оплаты, так я плачу сервису сниженную комиссию. Прошу не копировать промокод, а переходить по ссылке."
     url: "https://stepik.org/a/232803/pay?promo=4038a0310be870d3"
     buttonText: "Перейти к курсу"
-    noteIcon: "ℹ️"
-    note: "Stepik берет повышенную комиссию, поэтому стоимость программы выше. Вы можете оформить программу на юр. лицо через поддержку Stepik, но за это они берут дополнительную комиссию сверху цены программы."
+    note: "ℹ️ Stepik берет повышенную комиссию, поэтому стоимость программы выше. Вы можете оформить программу на юр. лицо через поддержку Stepik, но за это они берут дополнительную комиссию сверху цены программы."
     order: 2
