--- a/website/public/data/students-projects.json
+++ b/website/public/data/students-projects.json
@@ -3,14 +3,12 @@
     "title": "Пример проекта 1",
     "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано. Станьте первым, чей проект будет добавлен на сайт.\n",
     "url": "https://www.python.org/",
-    "author": "Гвидо ван Россум",
-    "order": 1
+    "author": "Гвидо ван Россум"
   },
   {
     "title": "Пример проекта 2",
     "description": "Описание второго проекта. Здесь можно рассказать о том, что было реализовано. Станьте вторым, чей проект будет добавлен на сайт.\n",
     "url": "https://vuejs.org/",
-    "author": "Эван Ю",
-    "order": 2
+    "author": "Эван Ю"
   }
 ]
