--- a/website/content/students-projects.yaml
+++ b/website/content/students-projects.yaml
@@ -1,8 +1,15 @@
+- title: "Movie Catalog"
+  description: >
+    Простой сервис для ведения каталога фильмов и выставления оценок.
+    Создан в рамках учебного проекта.
+  url: "https://github.com/Nottezz/FastAPI-Movie-Catalog"
+  author: "Nottezz"
+  
 - title: "Пример проекта 1"
   description: >
     Описание первого проекта студента.
     Здесь можно рассказать о том, что было реализовано.
-    Станьте вторым, чей проект будет добавлен на сайт.
+    Станьте первым, чей проект будет добавлен на сайт.
   url: "https://www.python.org/"
   author: "Гвидо ван Россум"
 
