update mock students' projects description

--- a/website/content/students-projects.yaml
+++ b/website/content/students-projects.yaml
@@ -2,7 +2,7 @@
   description: >
     Описание первого проекта студента.
     Здесь можно рассказать о том, что было реализовано.
-    Станьте первым, чей проект будет добавлен на сайт.
+    Станьте вторым, чей проект будет добавлен на сайт.
   url: "https://www.python.org/"
   author: "Гвидо ван Россум"
 
@@ -10,6 +10,6 @@
   description: >
     Описание второго проекта.
     Здесь можно рассказать о том, что было реализовано.
-    Станьте вторым, чей проект будет добавлен на сайт.
+    Если вы хотите показать свой проект, добавьте его сюда.
   url: "https://vuejs.org/"
   author: "Эван Ю"
