--- a/website/public/data/students-projects.json
+++ b/website/public/data/students-projects.json
@@ -1,13 +1,13 @@
 [
   {
     "title": "Пример проекта 1",
-    "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано. Станьте первым, чей проект будет добавлен на сайт.\n",
+    "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано. Станьте вторым, чей проект будет добавлен на сайт.\n",
     "url": "https://www.python.org/",
     "author": "Гвидо ван Россум"
   },
   {
     "title": "Пример проекта 2",
-    "description": "Описание второго проекта. Здесь можно рассказать о том, что было реализовано. Станьте вторым, чей проект будет добавлен на сайт.\n",
+    "description": "Описание второго проекта. Здесь можно рассказать о том, что было реализовано. Если вы хотите показать свой проект, добавьте его сюда.\n",
     "url": "https://vuejs.org/",
     "author": "Эван Ю"
   }
