--- a/website/content/students-projects.yaml
+++ b/website/content/students-projects.yaml
@@ -4,12 +4,12 @@
     Создан в рамках учебного проекта.
   url: "https://github.com/Nottezz/FastAPI-Movie-Catalog"
   author: "Nottezz"
-  
+
 - title: "Пример проекта 1"
   description: >
     Описание первого проекта студента.
     Здесь можно рассказать о том, что было реализовано.
-    Станьте первым, чей проект будет добавлен на сайт.
+    Станьте вторым, чей проект будет добавлен на сайт.
   url: "https://www.python.org/"
   author: "Гвидо ван Россум"
 
