compile student project

--- a/website/public/data/students-projects.json
+++ b/website/public/data/students-projects.json
@@ -1,5 +1,11 @@
 [
   {
+    "title": "Movie Catalog",
+    "description": "Простой сервис для ведения каталога фильмов и выставления оценок. Создан в рамках учебного проекта.\n",
+    "url": "https://github.com/Nottezz/FastAPI-Movie-Catalog",
+    "author": "Nottezz"
+  },
+  {
     "title": "Пример проекта 1",
     "description": "Описание первого проекта студента. Здесь можно рассказать о том, что было реализовано. Станьте вторым, чей проект будет добавлен на сайт.\n",
     "url": "https://www.python.org/",
