update generate data, minor refactoring

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
         run: |
           cd website
           npm run generate
-        # Note: This runs "npm run stats && nuxt generate"
-        # - npm run stats: Generates data files (course.json, stats.json, latest-changes.json, etc.)
+        # Note: This runs "npm run generate-data && nuxt generate"
+        # - npm run generate-data: Generates data files (course.json, stats.json, latest-changes.json, etc.)
         # - nuxt generate: Builds static site with pre-rendered pages
 
       - name: Upload artifact
