--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,9 +26,9 @@
       "detail": "Generate static site"
     },
     {
-      "label": "stats",
+      "label": "generate-data",
       "type": "npm",
-      "script": "stats",
+      "script": "generate-data",
       "path": "website/",
       "problemMatcher": [],
       "detail": "Regenerate data files (course, stats, faq, projects, latest-changes)"
